force-app/main/default/objects/Dev_Files__c/Dev_Files__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Files</label>
    <nameField>
        <displayFormat>DFN-{00000}</displayFormat>
        <label>Dev File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev File</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>