force-app/main/default/objects/Dev_Files__c/fields/Architecture__c.field-meta.xml
<CustomField>
    <fullName>Architecture__c</fullName>
    <description>Field Lable/API changed from Bitness to Architecture</description>
    <label>Architecture</label>
    <length>32</length>
    <type>Text</type>
</CustomField>