force-app/main/default/objects/Dev_Files__c/fields/Dev_Program__c.field-meta.xml
<CustomField>
    <fullName>Dev_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Program</label>
    <referenceTo>Developer_Program__c</referenceTo>
    <relationshipLabel>Dev File</relationshipLabel>
    <relationshipName>Dev_File</relationshipName>
    <type>Lookup</type>
</CustomField>