force-app/main/default/objects/Dev_Files__c/fields/Distro__c.field-meta.xml
<CustomField>
    <fullName>Distro__c</fullName>
    <label>Distro</label>
    <length>32</length>
    <type>Text</type>
</CustomField>