force-app/main/default/objects/Dev_Files__c/fields/Distro_Version__c.field-meta.xml
<CustomField>
    <fullName>Distro_Version__c</fullName>
    <label>Distro Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>