force-app/main/default/objects/Dev_Files__c/fields/File_Development_Areas__c.field-meta.xml
<CustomField>
    <fullName>File_Development_Areas__c</fullName>
    <description>This field will store the affinity associated with a file asset</description>
    <label>File Development Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AI / Deep Learning</fullName>
            </value>
            <value>
                <fullName>AR / VR</fullName>
            </value>
            <value>
                <fullName>Autonomous Machines</fullName>
            </value>
            <value>
                <fullName>Autonomous Vehicles</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Design &amp; Visualization</fullName>
            </value>
            <value>
                <fullName>Game Development</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>IoT / Smart Cities</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>