force-app/main/default/objects/Dev_Files__c/fields/File_Owner__c.field-meta.xml
<CustomField>
    <fullName>File_Owner__c</fullName>
    <description>This field will store the name/email of the owner of the file asset</description>
    <label>File Owner</label>
    <length>128</length>
    <type>Text</type>
</CustomField>