force-app/main/default/objects/Dev_Files__c/fields/Filepath__c.field-meta.xml
<CustomField>
    <fullName>Filepath__c</fullName>
    <label>Filepath</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>