force-app/main/default/objects/Dev_Files__c/fields/Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Operating_Systems__c</fullName>
    <label>Operating Systems</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Mac OS X</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>