force-app/main/default/objects/Dev_Files__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Field label/api changed from Package to Product</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>