force-app/main/default/objects/Dev_Files__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Field lable/api change from Version to Release</description>
    <label>Release</label>
    <length>128</length>
    <type>Text</type>
</CustomField>