force-app/main/default/objects/Dev_Files__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>This field will store the date the file asset was released or made available for developers to download</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>