force-app/main/default/objects/Dev_Files__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extranet</fullName>
            </value>
            <value>
                <fullName>Devzone</fullName>
            </value>
            <value>
                <fullName>NGC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>