force-app/main/default/objects/Dev_Files__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Filepath__c</columns>
    <columns>Source__c</columns>
    <columns>Product__c</columns>
    <columns>Release__c</columns>
    <columns>Operating_Systems__c</columns>
    <columns>Distro__c</columns>
    <columns>Activity_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>